--- a/css/mdq.css
+++ b/css/mdq.css
@@ -1,12 +1,91 @@
 
 
-
 @media screen and (min-width:768px) and (max-width:992px){
-  
-}
-@media screen and (min-width:992px) and (max-width:1200px){
-  
-}
-@media screen and (min-width:1200px){
+    html{
+        background-image: linear-gradient(#5f2d82, #499e9d);
+    }
+    .login{ 
+        width:80vw;
+        max-width: 80vw;
+        height: 45vh;
+        max-height:300px ;
+        position: absolute;
+    }   
+    .image{
+        width:30%;
+        height: 100%;
+    }
+    .image img{ 
+        border-radius: 18px 0 0 18px;
+    }
+    .form{
+        width: 69%;
+        position: absolute;
+        right: 0;
+        top: 0;
+        padding: 0;
+    }
+    .container-1,.container-2,.container-3,button{
+        margin: 3px auto;
+    }
+    .container-1 #email, .container-2 #senha{
+        width: 86%;
+        margin:1% 0 1.5% 3%;
+        padding-left: 1%;
+    }
+} 
+@media screen and (min-width:992px){
+    html{
+        background-image: linear-gradient(#5f2d82, #499e9d);
+    }
+    .login{ 
+        width:96vw;
+        max-width: 1000px;
+        height: 60vh;
+        max-height:360px;
+        position: absolute;
+    }
+    .image{
+        width:50%;
+        height: 100%;
+        position: absolute;
+        right: 0;
+    }
+    .image img{ 
+        border-radius: 0 18px 18px 0;
+    }
+    .form{
+        width: 50%;
+        height: 100%;
+        position: absolute;
+        left: 0;
+        top: 0;
+        padding: 10px;
+    }
+    .form h1{
+        margin: 15px 0;
+        font-size: 2.1em;
+    }
     
+    .form p{
+        font-size: 1em;
+        margin-bottom: 25px;
+    }
+    .container-1,.container-2,.container-3,button{
+        width: 100%;
+    }
+    button{
+        font-size: 1em;
+    }
+    .container-1 #email, .container-2 #senha{
+        width: 90%;
+        height: 38px;
+        margin:1% 0 1% 3%;
+    }
+    .container-1 span, .container-2 span{
+        position: relative;
+        top:19%;
+        left: 2%;
+        font-size: 1.7em;
+    }
 }
