--- a/css/mdq.css
+++ b/css/mdq.css
@@ -2,7 +2,7 @@
 
 @media screen and (min-width:768px) and (max-width:992px){
     html{
-        background-image: linear-gradient(#5f2d82, #499e9d);
+        background-image: linear-gradient(#331e36, #adb6c4);
     }
     .login{ 
         width:80vw;
@@ -36,7 +36,7 @@
 } 
 @media screen and (min-width:992px){
     html{
-        background-image: linear-gradient(#5f2d82, #499e9d);
+        background-image: linear-gradient(#331e36, #adb6c4);
     }
     .login{ 
         width:96vw;
