--- a/css/mdq.css
+++ b/css/mdq.css
@@ -7,8 +7,7 @@
     .login{ 
         width:80vw;
         max-width: 80vw;
-        height: 45vh;
-        max-height:300px ;
+        height:270px ;
         position: absolute;
     }   
     .image{
@@ -21,8 +20,8 @@
     .form{
         width: 69%;
         position: absolute;
-        right: 0;
         top: 0;
+        right: 0;
         padding: 0;
     }
     .container-1,.container-2,.container-3,button{
